# pso

./: main.ipynb  main.py  pyproject.toml  xla_flags.txt
core/: benchmarks.py  jax_gd_pso.py  plot_benchmarks.py
data/: experiments_results.csv
notebooks/: analysis.ipynb  experiments.ipynb
results/: benchmark_results.csv  convergence_table.tex  execution_time_table.tex  experiment_results.csv
