[project]
name = "pso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.9.0",
    "jaxopt>=0.8.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
	"ALL",
]
ignore = [
	"B905",    # zip() without an explicit strict= parameter
	"D100",    # Missing docstring in public module
	"D101",    # Missing docstring in public class
	"D103",    # Missing docstring in public function
	"D104",    # Missing docstring in public package
	"T201",    # print() found
	"PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements in function definition
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
